fixed The cosole error with router names need to find another way to do that.. Added the required font and changed the readme with the required dependencies and how to set it up... done for the night tbh

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -228,4 +228,4 @@ body.blue-background .header-nav-close-button {
 .nprogress-custom-parent #nprogress .spinner,
 .nprogress-custom-parent #nprogress .bar {
   position: absolute;
-}/*# sourceMappingURL=App.css.map */
+}/*# sourceMappingURL=app.css.map */
