--- a/src/css/pages/Home.scss
+++ b/src/css/pages/Home.scss
@@ -2,8 +2,8 @@
 //fonts
 @font-face {
   font-family: 'SMW';
-  src: url('../assets/fonts/smw.woff2') format('woff2'),
-    url('../assets/fonts/smw.woff') format('woff');
+  src: url('../../Assets/Fonts/smw.woff') format('woff2'),
+    url('../../Assets/Fonts/smw.woff2') format('woff');
   font-weight: normal;
   font-style: normal;
 }
