--- a/src/css/pages/About.scss
+++ b/src/css/pages/About.scss
@@ -1,4 +1,3 @@
-
 .page-about {
   .header-bg {
     opacity: 0;
@@ -18,7 +17,7 @@
     width: 43vw;
     aspect-ratio: 1/1;
     border-radius: 100%;
-    background-image: url(../../Assets/me2.jpg);
+    background-image: url(../../Assets/me.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -38,6 +37,17 @@
 
     @media screen and (max-width: 1024px) {
       padding-top: 50vw;
+    }
+
+    .std {
+      max-width: 42rem;
+      font-size: 1rem;
+      line-height: 1.5;
+      color: var(--std-color);
+      word-break: break-word;
+      -webkit-hyphens: none;
+      hyphens: none;
+      font-size: 1.2rem;
     }
   }
 
@@ -75,6 +85,9 @@
           margin-left: 0.5rem;
           height: 14px;
           width: 14px;
+          stroke: var(--bg);
+          fill: var(--purple);
+          stroke-width: 2px;
         }
 
         &:hover {
