--- a/src/css/pages/About.scss
+++ b/src/css/pages/About.scss
@@ -17,7 +17,7 @@
     width: 43vw;
     aspect-ratio: 1/1;
     border-radius: 100%;
-    background-image: url(../../Assets/me.jpg);
+    background-image: url(../../Assets/me2.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
