--- a/src/css/Components/TextBlock.scss
+++ b/src/css/Components/TextBlock.scss
@@ -5,7 +5,7 @@
   color: var(--std-color);
   word-break: break-word;
   hyphens: none;
-  font-size: 1.015em;
+  font-size: 1.2rem;
 
   h3 {
     margin-bottom: 1rem;
