--- a/src/css/pages/About.scss
+++ b/src/css/pages/About.scss
@@ -129,8 +129,9 @@
     width: 75vw;
 
     h2 {
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       margin-bottom: 1rem;
+      color: var(--std-color);
     }
 
     .columns {
@@ -150,6 +151,11 @@
       font-size: 1rem;
       line-height: 1.5em;
       color: var(--gray);
+
+      h2 {
+        font-size: 1.2rem;
+        color: var(--purple);
+      }
     }
 
     .tools {
