--- a/src/css/pages/About.scss
+++ b/src/css/pages/About.scss
@@ -5,6 +5,16 @@
   }
 }
 
+#about #thanks {
+  display: none;
+}
+
+@media screen and (max-width: 568px){
+  #about #thanks {
+    display: block;
+  }
+}
+
 #about {
   .pic {
     pointer-events: none;
@@ -23,7 +33,8 @@
     background-size: contain;
     filter: grayscale(1) brightness(1);
     mix-blend-mode: difference;
-
+    
+    
     @media screen and (max-width: 1024px) {
       top: -12vh;
       left: 50%;
@@ -131,7 +142,6 @@
     h2 {
       font-size: 1.3rem;
       margin-bottom: 1rem;
-      color: var(--std-color);
     }
 
     .columns {
@@ -153,7 +163,7 @@
       color: var(--gray);
 
       h2 {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
         color: var(--purple);
       }
     }
