Potion is workinggggggggg... well kinda.....

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -64,6 +64,13 @@ body {
   margin: 0 auto;
 }
 
+.page-test {
+  .header-bg {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
 .wrapper {
   position: relative;
   z-index: 1;
