--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -277,3 +277,23 @@ body {
     }
   }
 }
+
+
+.page-enter {
+  opacity: 0;
+}
+
+.page-enter-active {
+  opacity: 1;
+  transition: 1500ms;
+}
+
+.page-exit {
+  opacity: 1;
+}
+
+.page-exit-active {
+  opacity: 0;
+  transition: 300ms;
+}
+
