--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -279,21 +279,21 @@ body {
 }
 
 
-.page-enter {
-  opacity: 0;
-}
+// .page-enter {
+//   opacity: 0;
+// }
 
-.page-enter-active {
-  opacity: 1;
-  transition: 1500ms;
-}
+// .page-enter-active {
+//   opacity: 1;
+//   transition: 2000ms;
+// }
 
-.page-exit {
-  opacity: 1;
-}
+// .page-exit {
+//   opacity: 1;
+// }
 
-.page-exit-active {
-  opacity: 0;
-  transition: 300ms;
-}
+// .page-exit-active {
+//   opacity: 0;
+//   transition: 1000ms;
+// }
 
