Updated GSAP to modern convention

--- a/src/css/pages/About.scss
+++ b/src/css/pages/About.scss
@@ -9,11 +9,11 @@
   display: none;
 }
 
-@media screen and (max-width: 568px){
-  #about #thanks {
-    display: block;
-  }
-}
+// @media screen and (max-width: 568px){
+//   #about #thanks {
+//     display: block;
+//   }
+// }
 
 #about {
   .pic {
