--- a/src/css/Components/home/Backtrace.scss
+++ b/src/css/Components/home/Backtrace.scss
@@ -1,37 +1,197 @@
 
 .BacktraceScene {
-    #Backtrace1 {
-      .static-container {
-        position: relative;
-        z-index: 2;
-      }
-  
-      .container {
-        z-index: unset;
-      }
-  
-      svg {
-        overflow: visible;
-      }
+  #Backtrace1 {
+    .static-container {
+      position: relative;
+      z-index: 2;
     }
-  
-    #hexo {
-      position: absolute;
-      left: -5vw;
-      top: calc(50% - 15vw);
-      width: 30vw;
-      height: 30vw;
-      z-index: 10;
-      transform: rotateY(180deg);
-  
-      @media screen and (max-width: 1024px) {
-        top: auto;
-        bottom: 0;
-      }
-  
-      @media screen and (max-width: 768px) {
-        width: 50vw;
-        height: 50vh;
-      }
+
+    .container {
+      z-index: unset;
+    }
+
+    svg {
+      overflow: visible;
     }
   }
+
+  #Hexo {
+    position: absolute;
+    left: -5vw;
+    top: calc(50% - 15vw);
+    width: 30vw;
+    height: 30vw;
+    z-index: 10;
+    transform: rotateY(180deg);
+
+    @media screen and (max-width: 1024px) {
+      top: auto;
+      bottom: 0;
+    }
+
+    @media screen and (max-width: 768px) {
+      width: 50vw;
+      height: 50vh;
+    }
+  }
+
+  #Monsier {
+    position: absolute;
+    left: calc(100% - 30vw);
+    top: 40vh;
+    z-index: 20;
+    width: 60vw;
+    height: 80vh;
+    transform: scale(2);
+
+    @media screen and (max-width: 768px) {
+      top: 65vh;
+      width: 50vw;
+      height: 60vh;
+    }
+  }
+
+  #trish {
+    position: absolute;
+    right: 15vw;
+    top: 30vh;
+    z-index: 18;
+    width: 20vw;
+    height: 40vw;
+  }
+
+  #dino {
+    position: fixed;
+    right: 0;
+    bottom: -4vh;
+    z-index: 919;
+    width: 50vh;
+    height: 50vh;
+    cursor: pointer;
+
+    @keyframes smoke {
+      from {
+        stroke-dasharray: 36;
+        stroke-dashoffset: 72;
+      }
+
+      to {
+        stroke-dasharray: 36;
+        stroke-dashoffset: 0;
+      }
+    }
+
+    &:hover {
+      transition: filter 200ms ease-out;
+      filter: brightness(1.2);
+
+      .dino-sounds {
+        opacity: 1;
+        animation: smoke 1s linear infinite;
+      }
+    }
+
+    @media screen and (max-width: 1024px) {
+      right: -5vw;
+      bottom: -20vh;
+      width: 70vh;
+      height: 70vh;
+    }
+
+    @media screen and (max-width: 768px) {
+      width: 60vh;
+      height: 60vh;
+    }
+
+    .dino-sounds {
+      opacity: 0;
+      stroke-dasharray: 74;
+      stroke-dashoffset: 0;
+    }
+  }
+
+  #Astro {
+    position: absolute;
+    right: 0;
+    bottom: 35vh;
+    width: 20vw;
+    height: 20vw;
+
+    @media screen and (max-width: 568px) {
+      right: 0;
+      bottom: 55vh;
+      width: 20vh;
+      height: 20vh;
+    }
+  }
+
+  #coffee {
+    position: absolute;
+    right: 15vw;
+    top: 35vh;
+    width: 5vw;
+    height: 5vw;
+
+    @media screen and (max-width: 568px) {
+      right: 15vh;
+      top: 20vh;
+      width: 5vh;
+      height: 5vh;
+    }
+  }
+
+  #Cinnamon {
+    position: absolute;
+    right: 40vw;
+    bottom: 5vh;
+    width: 10vw;
+    height: 10vw;
+  }
+
+  #octo {
+    position: absolute;
+    right: 30vw;
+    top: 60vh;
+    width: 7vw;
+    height: 7vw;
+  }
+
+  #open {
+    position: absolute;
+    left: -20vw;
+    top: calc(50% - 20vw);
+    z-index: -1;
+    width: 40vw;
+    height: 40vw;
+
+    @media screen and (max-width: 1024px) {
+      top: auto;
+      bottom: -10vw;
+    }
+
+    @media screen and (max-width: 768px) {
+      width: 60vw;
+      height: 60vh;
+    }
+  }
+
+  #smart {
+    position: absolute;
+    left: 5vw;
+    bottom: -5vw;
+    z-index: -2;
+    width: 20vw;
+    height: 20vw;
+    filter: brightness(0.7);
+
+    @media screen and (max-width: 1024px) {
+      left: 10vw;
+    }
+
+    @media screen and (max-width: 768px) {
+      width: 30vw;
+      height: 30vw;
+      left: 20vw;
+    }
+  }
+}
