Made some changes to the naming of toons

--- a/src/css/Components/home/Backtrace.scss
+++ b/src/css/Components/home/Backtrace.scss
@@ -51,7 +51,7 @@
     }
   }
 
-  #trish {
+  #Trish {
     position: absolute;
     right: 15vw;
     top: 30vh;
@@ -110,7 +110,7 @@
     }
   }
 
-  #Astro {
+  #Nichan {
     position: absolute;
     right: 0;
     bottom: 35vh;
@@ -125,7 +125,7 @@
     }
   }
 
-  #coffee {
+  #Coffee {
     position: absolute;
     right: 15vw;
     top: 35vh;
@@ -148,7 +148,7 @@
     height: 10vw;
   }
 
-  #octo {
+  #Octo {
     position: absolute;
     right: 30vw;
     top: 60vh;
