--- a/src/css/Components/home/NoLimit.scss
+++ b/src/css/Components/home/NoLimit.scss
@@ -30,7 +30,7 @@
   }
   .NLtext {
     color: var(--std-color);
-    // padding-left: 100vw;
+    padding-left: 100vw;
     padding-right: 2rem;
     transform: translateY(0px) rotate(0deg);
     width: max-content;
